src/film-database/features/iframe/_fdiFrame.scss
@use '/src/sass/functions' as f;
@use '/src/film-database/scss/fdMixins' as m;

.fdiFrame {
  grid-area: 1 / 2 / 2 / 3;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  height: 50svh;
  &--h2 {
    display: none;
  }
  &__backdrop,
  &__player {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 1;
    height: 63svh;
    aspect-ratio: 16/9;
    transform: scale(1.3);
    transform-origin: center;
    &::before {
      content: '';
      position: absolute;
      left: 0;
      bottom: 0;
      z-index: 1;
      width: 100%;
      height: 30%;
      background: linear-gradient(to top, rgb(0, 0, 1) 50%, rgba(0, 0, 0, 0.5) 80%, rgba(0, 0, 0, 0) 100%);
      pointer-events: none;
    }
    &::after {
      content: '';
      position: absolute;
      left: 0;
      top: 0;
      width: 15%;
      height: 100%;
      background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 1) 100%);
      pointer-events: none;
    }
    & picture img,
    & iframe {
      position: absolute;
      top: -10px;
      right: 0;
    }
    & iframe {
      height: inherit;
      aspect-ratio: inherit;
      pointer-events: none;
      // YouTube IFrame Player API Requirements (16/9)
      min-width: 480px;
      min-height: 270px;
    }
  }
}

.fdiFrame:hover .iFrameController {
  opacity: 1;
}

